# almanac

./: .env.deployment.example  .env.example  CLAUDE.md  README.md  composer.json  package-lock.json  package.json
app/Jobs/: ClusterUnansweredQuestionsJob.php  CreateWorkspaceHnswIndexJob.php  EmbedDocumentJob.php  IngestConnectorJob.php  ProcessDeletionRequestJob.php  PruneExpiredConversationsJob.php
app/Models/: ApiKey.php  Connector.php  Conversation.php  DeletionRequest.php  DocAcl.php  DocChunk.php  Document.php  EmbedJobDlq.php  Feedback.php  GapCluster.php  IdentityMapping.php  IngestRun.php  PromptInjectionSignal.php  PromptTemplate.php  Query.php  UnansweredQuestion.php  User.php  Workspace.php  WorkspaceCostDaily.php  WorkspaceMembership.php
app/Providers/: AppServiceProvider.php
bootstrap/: app.php
config/: almanac.php
database/migrations/: 2026_06_08_170000_create_workspaces_table.php  2026_06_08_170002_create_workspace_memberships_table.php  2026_06_08_170003_create_api_keys_table.php  2026_06_08_170010_create_audit_events_table.php  2026_06_12_120000_enable_vector_extension.php  2026_06_12_120001_create_connectors_table.php  2026_06_12_120002_create_identity_mappings_table.php  2026_06_12_120003_create_documents_table.php  2026_06_12_120004_create_doc_chunks_table.php  2026_06_12_120005_create_doc_acls_table.php  (+12 more)
openapi/: spec.yaml
routes/: api.php  console.php
scripts/: backup-restore-test.sh
tests/: TestCase.php
web/: .env.example  package.json  tsconfig.tsbuildinfo
web/app/: page.tsx  (+1 more)
workers/embed/: README.md  app.py  pyproject.toml
(+106 files in other folders)
