[project]
name = "almanac-embed-worker"
version = "0.1.0"
description = "Almanac FastAPI embed + chunker + LLM-judge sidecar."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
openai = [
    "openai>=1.30",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
